# fastdaimaCodeAssist

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml  todo.md
codebase/: embeddings.py  index.py  treesitter.py
references/: 01_treesitter_walkthrough.py  02_huggingface_embeddings_example.py  03_lancedb_custom_embeddings.py
