[project]
name = "fastdaimacodeassist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lancedb>=0.16.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "tiktoken>=0.8.0",
    "torch>=2.5.1",
    "transformers>=4.46.3",
    "tree-sitter-languages>=1.10.2",
    "tree-sitter-python>=0.23.4",
    "tree-sitter==0.21.3",
]
